2008-11-21 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Fixed bug: Setting the page range of an option to
	  multiple ranges (seperated by comma), foomatic-rip was caught in an
	  infinte loop.

2008-11-13 Lars Uebernickel <larsuebernickel@gmx.de>
	* options.c: Don't prepend @PJL to JCL options if they already start
	  with @PJL. Unhexify JCL commands.

	* options.c: Handle CustomJCL<option> and ParamCustomJCL<option>.
	  Prefer JCL Custom options over foomatic options (as was already done
	  for PostScript options).

2008-10-22  Till Kamppeter <till.kamppeter@gmail.com>

	* postscript.c: Reset the "fromcomposite" variable when treating
	  a "%%BeginFeature" line. In this case we do not do the treatment
	  of composite options and so the variable should never remain set
	  from a previous "%%FoomaticRIPOption" line. Fixes the problem
	  described in comment #23 of bug #173.

2008-10-15 Lars Uebernickel <larsuebernickel@gmx.de>
	* ppd.c: In some cases, the code for the true and false settings of
	boolean values was interchanged. E.g., if the user (or the default)
	chose "false" for an option, the code for "true" was embedded in the
	PostScript / JCL / Command Line.

2008-10-15 Lars Uebernickel <larsuebernickel@gmx.de>
	* postscript.c: Let foomatic-rip not try to correct the
          settings of boolean and enumerated choice options embedded in
          the Prolog and Setup sections of the PostScript input data. With
          the current pstops filter of CUPS we cannot determine any more
          whether these options come from pstops or from the application.
          Corrections of these options are only needed in the PageSetup,
          anyway, for page overrides (Bug #173). [ported from foomatic-rip 3]

2008-10-01 Lars Uebernickel <larsuebernickel@gmx.de>
	* pdf.c: Use $TMPDIR for storing temporary files, and only use
	P_tmpdir or /tmp if $TMPDIR is not writable.

2008-09-25  Till Kamppeter <till.kamppeter@gmail.com>
