@@ -3,6 +3,10 @@
 	  multiple ranges (seperated by comma), foomatic-rip was caught in an
 	  infinte loop.
 
+	* options.c: Fixed bug: Page ranges were not applied for command line
+	  options when processing PostScript files (the renderer wasn't
+	  restarted as it should have been).
+
 2008-11-13 Lars Uebernickel <larsuebernickel@gmx.de>
 	* options.c: Don't prepend @PJL to JCL options if they already start
 	  with @PJL. Unhexify JCL commands.
